@@ -1032,7 +1032,7 @@ int overlay_visible_when_menu_closed=0;
 z80_bit auto_frameskip_even_when_movin_windows={0};
 
 //Hacer autoframeskip al dibujar fondo zx deskop
-z80_bit auto_frameskip_draw_zxdesktop_background={1};
+z80_bit frameskip_draw_zxdesktop_background={1};
 
 //Aunque este siempre se asignara primero, pero por si acaso le damos valor por defecto
 z80_bit autoframeskip_setting_before_moving_windows={1};
@@ -6358,10 +6358,10 @@ void menu_draw_ext_desktop(void)
 
     int dibujar_zxdesktop_background=1;
 
-    if (auto_frameskip_draw_zxdesktop_background.v) {
+    if (frameskip_draw_zxdesktop_background.v) {
         if (!screen_if_refresh()) dibujar_zxdesktop_background=0;
     }
-    
+
     if (dibujar_zxdesktop_background) menu_draw_ext_desktop_background(xstart_zxdesktop);
 
 
