@@ -80,6 +80,7 @@ Improved ZX Desktop:
 -Added frame around emulated machine
 -Added setting to mix scr image with background
 -Allow to set any tape/snapshot/disk that contains a spectrum screen (SCR) as background
+-Apply frameskip when drawing ZX Desktop Background
 
 Improved HiLow DataDrive emulation:
 -Allow to Format, Browse and Chkdsk a Hilow DataDrive image (.ddh file)
